# turnir_v5_1

./: app.py  db_init.sh  fill_fighters.py  pyproject.toml
extensions/: extensions.py
routes/: routes.py
